--- a/build.gradle
+++ b/build.gradle
@@ -30,32 +30,43 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.preference:preference-ktx:1.1.1'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    implementation "androidx.core:core-ktx:1.3.2"
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
 
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
+
     implementation 'androidx.room:room-runtime:2.3.0-beta02'
     kapt 'androidx.room:room-compiler:2.3.0-beta02'
     kapt 'android.arch.persistence.room:compiler:2.3.0-beta01'
 
-    implementation project(':ByteSculptorLib')
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'androidx.work:work-runtime-ktx:2.5.0'
+
+    testImplementation 'junit:junit:4.13.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'android.arch.persistence.room:testing:2.2.5'
 
     // external libs
     implementation 'com.shawnlin:number-picker:2.4.11'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.0'
+
+    implementation project(':ByteSculptorLib')
 }
+
 repositories {
     mavenCentral()
 }
